# connectlife

./: .gitignore  DEVELOPMENT  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: pr-test.yaml  python-publish.yaml
connectlife/: api.py  appliance.py  dump.py  test_server.py  trir.py
connectlife/tests/: test_api.py  test_appliance.py  test_dump.py  test_trir.py
dumps/: 003-000.json  003.md  004-000.json  004.md  006-200.json  006.md  007-400.json  007-499.json  007.md  008.md  009-100.json  009-104.json  009-104_2.json  009-106.json  009-109.json  009-19901.json  009.md  010-000.json  010.md  012-000.json  012.md  013-000.json  013-oven-bio21-iconledplus.json  013.md  015-000.json  015-dishwasher-60.2.json  015.md  016-502.json  016.md  020-63c45b513e1a4bf7.json  020.md  021-df8ae1406f86cade.json  021.md  023-295608422d362be1.json  023.md  025-1wj080831v0w.json  025-1wj080837v0w.json  025-1wj090729v0w.json  025-1wj100722v0w.json  025-1wj100725v0t.json  (+37 more)
dumps/property-lists/: 015-dishwasher-60.2-property-list.json  034-1j0122z0035j-property-list.json
