[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "connectlife"
version = "0.1.0"
authors = [
    { name="Øyvind Matheson Wergeland", email="oyvind@wergeland.org" },
]
description = "A Python library for communicating with the ConnectLife API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.9.5",
]

[project.urls]
Homepage = "https://github.com/oyvindwe/connectlife"
Issues = "https://github.com/oyvindwe/connectlife/issues"
